# zephyr_app

./: README.md
cmake_demo/: CMakeLists.txt
cmake_demo/src/: main.c  my_lib.c
modules/say_hello/: CMakeLists.txt  Kconfig  say_hello.c
tst1/: CMakeLists.txt  README.md
tst1/board/: jc4827w543.conf  jc4827w543.overlay
tst1/src/: main.c
